--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ProjectList.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ProjectList.razor
@@ -1,103 +1,109 @@
 ﻿@page "/projectlist/{EnvironmentClusterId:int}"
 @inherits MasaCompontentBase
 
-<MExpansionPanels Flat Accordion>
-    @foreach (var project in _projects)
-    {
-        var apps = _apps.Where(app => app.ProjectId == project.Id).ToList();
-        <MExpansionPanel Class="rounded-5 my-3">
-            <MExpansionPanelHeader Style="height: 56px;" Class="my-6">
-                <ChildContent>
-                    <span style="display:flex;align-items:center; margin-right:10px;">
-                        <div class="emphasis--text h6">
-                            <MHover Context="hoverContext">
-                                <span @onclick:stopPropagation @onclick="()=>HandleProjectNameClick(project.Id)" @attributes="hoverContext.Attrs" class="@(hoverContext.Hover ? "primary--text":"")">
-                                    @project.Name
-                                </span>
-                            </MHover>
-                            <div class="mt-1 regul ar3--text body2 d-flex" style="padding:0">
-                                @{
-                                    string backgroundColor;
-                                    switch (project.LabelCode.ToLower())
-                                    {
-                                        case "basicability":
-                                            backgroundColor = "#37D7AD";
-                                            break;
-                                        case "operator":
-                                            backgroundColor = "#FFB547";
-                                            break;
-                                        case "datafactory":
-                                            backgroundColor = "#5FB9FF";
-                                            break;
-                                        default:
-                                            backgroundColor = "#BDBDBD";
-                                            break;
-                                    }
-                                }
-                                <div class="d-flex justify-center mr-2" style="border-radius:6px; color:#fff; background-color:@backgroundColor; padding:0 4px;">
-                                    @project.LabelName
-                                </div>
-                                <span class="regular3--text body2">@project.Identity</span>
-                                <span class="ml-2 regular3--text body2">|</span>
-                                <sapn class="ml-2 regular3--text body2">@T("AppCount"):@apps.Count</sapn>
-                            </div>
-                        </div>
-                    </span>
-                </ChildContent>
-                <ActionsContent>
-                    <MIcon Color="#485585">
-                        mdi-chevron-down
-                    </MIcon>
-                </ActionsContent>
-            </MExpansionPanelHeader>
-            <MExpansionPanelContent>
-                <MRow>
-                    @foreach (var app in apps.OrderByDescending(app => app.IsPinned).ThenByDescending(app => app.ModificationTime).Take(6))
-                    {
-                        @if (app.ProjectId == project.Id)
-                        {
-                            <MCol Lg="4" Md="6" Sm="12">
-                                <AppCard OnClick="()=>HandleAppCardClick(new NavigateToConfigModel(app.Id, app.ProjectId, app.EnvironmentClusters[0].Id, ConfigObjectType.App))" OnPinClick="()=>HandleAppPinClick(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters">
-                                    <MChipGroup Class="env-cluster-chip-group" ActiveClass="primary--text">
-                                        @foreach (var item in app.EnvironmentClusters)
+<div class="full-height" style="overflow: auto;">
+    <MExpansionPanels Flat Accordion @key="@($"{EnvironmentClusterId}{TeamId}")">
+        @foreach (var project in _projects)
+        {
+            var apps = _apps.Where(app => app.ProjectId == project.Id).ToList();
+            <MExpansionPanel Class="rounded-5 mb-6">
+                <MExpansionPanelHeader Style="height: 56px;" Class="my-6">
+                    <ChildContent>
+                        <span style="display:flex;align-items:center; margin-right:10px;">
+                            <div class="emphasis--text h6">
+                                <MHover Context="hoverContext">
+                                    <span @onclick:stopPropagation @onclick="()=>HandleProjectNameClick(project.Id)" @attributes="hoverContext.Attrs" class="@(hoverContext.Hover ? "primary--text":"")">
+                                        @project.Name
+                                    </span>
+                                </MHover>
+                                <div class="mt-1 regul ar3--text body2 d-flex" style="padding:0">
+                                    @{
+                                        string backgroundColor;
+                                        switch (project.LabelCode.ToLower())
                                         {
-                                            <EnvClusterChip OnClick="()=>HandleAppCardClick(new NavigateToConfigModel(app.Id, app.ProjectId, item.Id, ConfigObjectType.App))"
-                                            Style="margin:0 12px 1px 0;"
-                                            EnvironmentName="@item.EnvironmentName"
-                                            EnvironmentColor="@item.EnvironmentColor"
-                                            ClusterName="@item.ClusterName" />
+                                            case "basicability":
+                                                backgroundColor = "#37D7AD";
+                                                break;
+                                            case "operator":
+                                                backgroundColor = "#FFB547";
+                                                break;
+                                            case "datafactory":
+                                                backgroundColor = "#5FB9FF";
+                                                break;
+                                            default:
+                                                backgroundColor = "#BDBDBD";
+                                                break;
                                         }
-                                    </MChipGroup>
-                                </AppCard>
-                            </MCol>
-                        }
-                    }
-                </MRow>
-                <div class="d-flex justify-space-between align-flex-end mt-3 mb-2">
-                    @{
-                        var team = _allTeams.FirstOrDefault(team => team.Id == project.TeamId) ?? new();
-                        <MTooltip Right>
-                            <ActivatorContent>
-                                <MAvatar Size="24" @attributes="@context.Attrs">
-                                    <MImage Src="@team.Avatar"></MImage>
-                                </MAvatar>
-                            </ActivatorContent>
-                            <ChildContent>
-                                <span>@team.Name</span>
-                            </ChildContent>
-                        </MTooltip>
-                    }
-                    <MHover>
-                        @{
-                            var mClass = $"{(context.Hover ? "primary--text" : "regular2--text")}";
-                            <div @onclick="()=>HandleProjectNameClick(project.Id)" @attributes="context.Attrs" class="@($"hover-pointer btn {mClass}")">
-                                @T("More")
-                                <MIcon Class="@($"ml-1 {mClass}")" Size="18">mdi-chevron-right</MIcon>
+                                    }
+                                    <div class="d-flex justify-center mr-2" style="border-radius:6px; color:#fff; background-color:@backgroundColor; padding:0 4px;">
+                                        @project.LabelName
+                                    </div>
+                                    <span class="regular3--text body2">@project.Identity</span>
+                                    <span class="ml-2 regular3--text body2">|</span>
+                                    <sapn class="ml-2 regular3--text body2">@T("AppCount"):@apps.Count</sapn>
+                                </div>
                             </div>
+                        </span>
+                    </ChildContent>
+                    <ActionsContent>
+                        <MIcon Color="#485585">
+                            mdi-chevron-down
+                        </MIcon>
+                    </ActionsContent>
+                </MExpansionPanelHeader>
+                <MExpansionPanelContent>
+                    <MRow>
+                        @foreach (var app in apps.OrderByDescending(app => app.IsPinned).ThenByDescending(app => app.ModificationTime).Take(6))
+                        {
+                            @if (app.ProjectId == project.Id)
+                            {
+                                <MCol Lg="4" Md="6" Sm="12">
+                                    <AppCard OnClick="()=>HandleAppCardClick(new ConfigComponentModel(app.Id, app.EnvironmentClusters[0].Id, ConfigObjectType.App, app.ProjectId))" OnPinClick="()=>HandleAppPinClick(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters">
+                                        <MChipGroup Class="env-cluster-chip-group" ActiveClass="primary--text">
+                                            @foreach (var item in app.EnvironmentClusters)
+                                            {
+                                                <EnvClusterChip OnClick="()=>HandleAppCardClick(new ConfigComponentModel(app.Id, item.Id, ConfigObjectType.App, app.ProjectId))"
+                                                Style="margin:0 12px 1px 0;"
+                                                EnvironmentName="@item.EnvironmentName"
+                                                EnvironmentColor="@item.EnvironmentColor"
+                                                ClusterName="@item.ClusterName" />
+                                            }
+                                        </MChipGroup>
+                                    </AppCard>
+                                </MCol>
+                            }
                         }
-                    </MHover>
-                </div>
-            </MExpansionPanelContent>
-        </MExpansionPanel>
-    }
-</MExpansionPanels>
+                    </MRow>
+                    <div class="d-flex justify-space-between align-flex-end mt-3 mb-2">
+                        @{
+                            var team = _allTeams.FirstOrDefault(team => team.Id == project.TeamId) ?? new();
+                            <MTooltip Right>
+                                <ActivatorContent>
+                                    <MAvatar Size="24" @attributes="@context.Attrs">
+                                        <MImage Src="@team.Avatar"></MImage>
+                                    </MAvatar>
+                                </ActivatorContent>
+                                <ChildContent>
+                                    <span>@team.Name</span>
+                                </ChildContent>
+                            </MTooltip>
+                        }
+                        <MHover>
+                            @{
+                                var mClass = $"{(context.Hover ? "primary--text" : "regular2--text")}";
+                                <div @onclick="()=>HandleProjectNameClick(project.Id)" @attributes="context.Attrs" class="@($"hover-pointer btn {mClass}")">
+                                    @T("More")
+                                    <MIcon Class="@($"ml-1 {mClass}")" Size="18">mdi-chevron-right</MIcon>
+                                </div>
+                            }
+                        </MHover>
+                    </div>
+                </MExpansionPanelContent>
+            </MExpansionPanel>
+        }
+    </MExpansionPanels>
+</div>
+
+<MOverlay Value="_showProcess" Absolute Color="#fdfdfd">
+    <MProgressCircular Width="4" Indeterminate Size="48" Color="primary"></MProgressCircular>
+</MOverlay>
