chore: code review

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
@@ -40,92 +40,8 @@
                             </MTextField>
                         </div>
                         <div class="mt-6" style="height: calc(100vh - 256px); overflow: hidden; position: relative;">
-                            @*                            <MExpansionPanels Flat Accordion>
-                            @foreach (var project in _projects)
-                            {
-                            var apps = _apps.Where(app => app.ProjectId == project.Id).ToList();
-                            <MExpansionPanel Class="rounded-5 my-3">
-                            <MExpansionPanelHeader Style="height: 56px;" Class="my-6">
-                            <ChildContent>
-                            <span style="display:flex;align-items:center; margin-right:10px;">
-                            <div class="emphasis--text h6">
-                            <MHover Context="hoverContext">
-                            <span @onclick:stopPropagation @onclick="()=>NavigateToAppAsync(project.Id)" @attributes="hoverContext.Attrs" class="@(hoverContext.Hover ? "primary--text":"")">
-                            @project.Name
-                            </span>
-                            </MHover>
-                            <div class="mt-1 regular3--text btn d-flex" style="padding:0">
-                            @{
-                            string backgroundColor;
-                            switch (project.LabelCode.ToLower())
-                            {
-                            case "basicability":
-                            backgroundColor = "#37D7AD";
-                            break;
-                            case "operator":
-                            backgroundColor = "#FFB547";
-                            break;
-                            case "datafactory":
-                            backgroundColor = "#5FB9FF";
-                            break;
-                            default:
-                            backgroundColor = "#BDBDBD";
-                            break;
-                            }
-                            }
-                            <div class="d-flex justify-center mr-2" style="border-radius:6px; color:#fff; background-color:@backgroundColor; padding:0 4px;">
-                            @project.LabelName
-                            </div>
-                            <span class="regular3--text body2">@project.Identity</span>
-                            <span class="ml-2 regular3--text body2">|</span>
-                            <sapn class="ml-1 regular3--text body2">@T("AppCount"):@apps.Count</sapn>
-                            </div>
-                            </div>
-                            </span>
-                            </ChildContent>
-                            <ActionsContent>
-                            <MIcon Color="#485585">
-                            mdi-chevron-down
-                            </MIcon>
-                            </ActionsContent>
-                            </MExpansionPanelHeader>
-                            <MExpansionPanelContent>
-                            <MRow>
-                            @foreach (var app in apps.Where(app => app.IsPinned).Take(3))
-                            {
-                            <MCol Lg="4" Md="6" Sm="12">
-                            <AppCard OnClick="()=>NavigateToConfigAsync(new ConfigComponentModel(app.Id, app.EnvironmentClusters[0].Id, ConfigObjectType.App, app.ProjectId))" OnPinClick="()=>AppPinAsync(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters">
-                            <MChipGroup Class="env-cluster-chip-group" ActiveClass="primary--text">
-                            @foreach (var item in app.EnvironmentClusters)
-                            {
-                            <EnvClusterChip OnClick="()=>NavigateToConfigAsync(new ConfigComponentModel(app.Id, item.Id, ConfigObjectType.App, app.ProjectId))"
-                            Style="margin:0 12px 1px 0;"
-                            EnvironmentName="@item.EnvironmentName"
-                            EnvironmentColor="@item.EnvironmentColor"
-                            ClusterName="@item.ClusterName" />
-                            }
-                            </MChipGroup>
-                            </AppCard>
-                            </MCol>
-                            }
-                            </MRow>
-                            <div class="d-flex justify-end align-flex-end mt-3 mb-2">
-                            <MHover>
-                            @{
-                            var mClass = $"{(context.Hover ? "primary--text" : "regular2--text")}";
-                            <div @onclick="()=>NavigateToAppAsync(project.Id)" @attributes="context.Attrs" class="@($"hover-pointer btn {mClass}")">
-                            @T("More")
-                            <MIcon Class="@($"ml-1 {mClass}")" Size="18">mdi-chevron-right</MIcon>
-                            </div>
-                            }
-                            </MHover>
-                            </div>
-                            </MExpansionPanelContent>
-                            </MExpansionPanel>
-                            }
-                            </MExpansionPanels>*@
                             <ProjectList @ref="_projectListComponent"
-                                         FetchProjectCount="GetProjectCount"
+                                         FetchProjectCount="ProjectCountHandler"
                                          TeamId="_userTeam.Id"
                                          OnNameClick="NavigateToAppAsync"
                                          OnAppCardClick="NavigateToConfigAsync"
