feat: add clone biz config feature

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/EnvClusterChip.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/EnvClusterChip.razor
@@ -1,5 +1,5 @@
 ﻿<MChip OnClick="OnClick" Ripple=false Small Outlined Class="@Class" Style="@Style">
-    <div class="@($"{EnvironmentColor}--text")">@EnvironmentName</div>&nbsp;&nbsp;
+    <div style="@($"color: {EnvironmentColor} !important")" class="text-overflow">@EnvironmentName</div>&nbsp;&nbsp;
     <div style="color:#05CD99">@ClusterName</div>
 </MChip>
 
