--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
@@ -749,3 +749,7 @@ input::-webkit-input-placeholder {
     max-width: 24px !important;
     margin-left: 8px;
 }
+
+textarea:disabled {
+    color: rgba(0,0,0,.5);
+}
