feat: clone app add default select

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
@@ -57,6 +57,7 @@
                                                              Outlined
                                                              TItem="ProjectModel"
                                                              TItemValue="int"
+                                                             HideSelected="false"
                                                              TValue="int"
                                                              Items="_allProjects"
                                                              ItemText="l=>l.Name"
@@ -68,6 +69,7 @@
                                                              MenuProps="props => props.OffsetY = true"
                                                              Outlined
                                                              HideDetails="true"
+                                                             HideSelected="false"
                                                              Items="_cloneApps"
                                                              ItemText="l=>l.Name"
                                                              ItemValue="l=>l.Id">
